--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="author" content="LIA Group" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -37,7 +38,7 @@
       crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <title>Braun Jobs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
